 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBX-3555] fixed possible pollers hang while processing ssh.run[] checks (Sasha)
 - [ZBXNEXT-408] added zabbix[process,...] internal checks (Sasha)
 - [ZBX-2262] added `hosts_templates_2' index (Sasha)
 - [ZBX-3537] trigger events are now sorted by timestamp (KB)
 - [ZBX-3472] changed item and discovery rule form to display SSH and SNMPv3 auth fields correctly when changing item type (KB)
 - [ZBX-3542] reduced the amount of debugging output for configuration cache (asaveljevs)
 - [ZBX-3536] made SNMP checks work when DNS resolves to IPv6 address; thanks to Marc Dequènes (asaveljevs,Sasha)
 - [ZBX-3541] fixed processing of nodata() function (Sasha)
 - [ZBX-3126] all checkboxes in map and screen import are now "on" by default (KB)
 - [ZBX-3158] improved links in map element menu (Aly)
 - [ZBX-3532] fixed add item to trigger expression from popup menu (Vedmak,Vlad)
 - [ZBX-1357] fixed confusing date format in network maps (Richlv)
 - [ZBX-3516] fixed items and hosts disappearing from configuration cache indexes (asaveljevs)
 - [ZBX-3479] fixed possible hang of agents while processing scripts or net.tcp.service* checks (Sasha)
 - [ZBX-3514] fixed log trigger wizard (Aly)
 - [ZBX-3515] fixed names of SNMPv3 security levels, again (asaveljevs)
 - [ZBX-3411] fixed trigger filter update when changing host (Aly,Vlad)
 - [ZBX-3431] fixed severity for log and eventlog or mixed (Vlad)
 - [ZBX-2913] fixed timeout handling in processing of web.page.* checks (sasha)
 - [ZBX-3176] removed navigation dropdown from applications screen (Vedmak)