@@ -88,7 +88,9 @@ New features:
 
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
-
+ 
+ - [ZBX-3563] fixed host group filter in graph selection popup (Aly)
+ - [ZBX-3544] fixed user login method reseting attempts (Aly)
  - [ZBX-3555] fixed possible pollers hang while processing ssh.run[] checks (Sasha)
  - [ZBXNEXT-408] added zabbix[process,...] internal checks (Sasha)
  - [ZBX-2262] added `hosts_templates_2' index (Sasha)
